alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,6 @@ h3 {
     font-family: 'ProximaNova', sans-serif;
     font-weight: bold;
     font-size: 1.4em;
-    text-align: center;
 }
 
 h4{
@@ -125,13 +124,17 @@ img {
     padding: 2px 10px 4px;
     margin: 7px;
 }
-h3 .search-button {
+h3.search-button {
     font-size: 18px;
     text-decoration: none;
     border-style: none;
     border-radius: 5px;
     padding: 2px 10px 4px;
     margin: 0px;
+}
+
+.mobile-layout > h3{
+    text-align: center;
 }
 
 .map-view {
